syntax = "proto3";

package twitter;

option go_package = "fenek.sso.v1;ssov1";

// -----------------Auth service-----------------

// Auth is service for managing permissions and roles.
service AuthService {
  // Register registers a new user.
  rpc Register (RegisterRequest) returns (RegisterResponse);
  // Login logs in a user and returns an auth token.
  rpc Login (LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
  string username = 1; // Username to register.
  string password = 2; // Password of the user to register.
}

message RegisterResponse {
  string username = 1; // Username of the registered user.
}

message LoginRequest {
  string username = 1; // Username to  login.
  string password = 2; // Password of the user to login.
}

message LoginResponse {
  string token = 1; // Auth token of the logged in user.
}


// -----------------Cache service-----------------

import "google/protobuf/timestamp.proto";

service CacheService {
  rpc CreateTweet(CreateTweetRequest) returns (CreateTweetResponse);
  rpc DeleteTweet(DeleteTweetRequest) returns (DeleteTweetResponse);
  rpc FindTweetById(FindTweetByIdRequest) returns (FindTweetByIdResponse);
  rpc FindUserById(FindUserByIdRequest) returns (FindUserByIdResponse);
  rpc SaveUser(SaveUserRequest) returns (SaveUserResponse);
  rpc UpdateTweet(UpdateTweetRequest) returns (UpdateTweetResponse);
}

message Tweet {
  string id = 1;
  string content = 2;
  string username = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message User {
  string username = 1;
  bytes pass_hash = 2;
  string description = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message CreateTweetRequest {
  string username = 1;
  string content = 2;
}

message CreateTweetResponse {
  Tweet tweet = 1;
}

message DeleteTweetRequest {
  string id = 1;
}

message DeleteTweetResponse {
  string id = 1;
}

message FindTweetByIdRequest {
  string id = 1;
}

message FindTweetByIdResponse {
  Tweet tweet = 1;
}

message FindUserByIdRequest {
  string id = 1;
}

message FindUserByIdResponse {
  User user = 1;
}

message SaveUserRequest {
  string username = 1;
  bytes pass_hash = 2;
}

message SaveUserResponse {
  string user_id = 1;
}

message UpdateTweetRequest {
  string id = 1;
  string content = 2;
}

message UpdateTweetResponse {
  Tweet tweet = 1;
}
